# autonomous_driving_project

./: README.md
gazebo_ackermann_drive_plugin/: CMakeLists.txt  package.xml
gazebo_ackermann_drive_plugin/include/: AckermannDrivePlugin.h
gazebo_ackermann_drive_plugin/src/: AckermannDrivePlugin.cpp
myhamster_challenge/: CMakeLists.txt  package.xml
myhamster_challenge/calibration/: lane.yaml  projection.yaml
myhamster_challenge/launch/: autorace_core.launch  camera_cali.launch  control_lane.launch  lane_detect.launch  load_world.launch  mapping.launch  navigation.launch  navigation_test.launch  reverse_parking.launch  right_angle.launch  s_shape.launch  send_goal.launch  side_parking.launch  start_gazebo.launch  up_hill.launch
myhamster_challenge/map/: map.pgm  map.yaml
myhamster_challenge/nodes/: control_lane  core_node_controller  image_projection  up_hill
myhamster_challenge/src/: reverse_parking.cpp  right_angle.cpp  side_parking.cpp  simple_navigation_goals copy.cpp  simple_navigation_goals.cpp
myhamster_navigation/: CMakeLists.txt  package.xml
myhamster_navigation/launch/: amcl.launch  move_base.launch  navigation.launch  unknown_explore.launch
myhamster_navigation/maps/: map.pgm
myhamster_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
myhamster_simulation/: CMakeLists.txt  package.xml
myhamster_simulation/launch/: hamster_v7.launch  hamster_v71.launch
myhamster_simulation/meshes/: A2_lidar.dae  camera.stl  camera_iris.stl  hamster_wheel.dae  rp_lidar_head.dae  rp_lidar_head.stl  shell.dae  shell.stl  tag.stl  wheel.dae
myhamster_simulation/models/big_table/: big_table_collision.dae  big_table_visual.dae  model.config  model.sdf
myhamster_simulation/models/cogni_office/: model.config  model.sdf
myhamster_simulation/models/computer_screen/: computer_screen_collision.dae  computer_screen_visual.dae  model.config  model.sdf
myhamster_simulation/models/conference_table/: conference_table.dae  model.config  model.sdf
myhamster_simulation/models/desk_1/: model.config  model.sdf
myhamster_simulation/models/desk_2/: desk_2_collision.dae  desk_2_visual.dae  model.config  model.sdf
myhamster_simulation/models/desk_3/: desk_3_visual.dae  model.config  model.sdf
myhamster_simulation/models/divan/: divan_collision.dae  model.config  model.sdf
myhamster_simulation/models/kitchen/: kitchen_collision.dae  kitchen_visual.dae  model.config  model.sdf
myhamster_simulation/models/level_table/: level_table.dae  model.config  model.sdf
myhamster_simulation/models/living_room/: model.config  model.sdf
myhamster_simulation/models/office_chair/: model.config  model.sdf  office_chair_collision.dae  office_chair_visual.dae
myhamster_simulation/rviz/: rviz_basic.rviz  rviz_slam.rviz
myhamster_simulation/urdf/: front_wheel.urdf.xacro  hamster.urdf.xacro  rear_wheel.urdf.xacro
myhamster_simulation/worlds/: my_world.sdf  my_world.world  my_world1.world  my_world2.world  turtlebot3_autorace.world
myhamster_slam/: CMakeLists.txt  package.xml
myhamster_slam/config/: myhamster_lds_2d_gazebo.lua
myhamster_slam/launch/: myhamster_cartographer.launch  myhamster_frontier_exploration.launch  myhamster_gmapping.launch  myhamster_hector.launch  myhamster_karto.launch  myhamster_manipulation_slam.launch  myhamster_slam.launch
myhamster_slam/src/: flat_world_imu.cpp
mytutorial_pkg/: CMakeLists.txt  package.xml
mytutorial_pkg/config/: gmapping_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
mytutorial_pkg/launch/: amcl.launch  gmapping.launch  image_saver.launch  move_base.launch  navigation.launch  slam.launch  teleop.launch  tutorial_1.launch  tutorial_pkg_node.launch  unknown_explore.launch
mytutorial_pkg/map/: map.pgm  racecar_walker_map.pgm  racecar_walker_map.yaml  turtlebot3_stage_4.pgm  turtlebot3_stage_4.yaml
mytutorial_pkg/saved_images/: image0003.ini
mytutorial_pkg/scripts/: cmd_vel_to_ackermann_drive.py  cmd_vel_to_ackermann_drive_simple.py  keyboard.py
mytutorial_pkg/src/: tutorial_pkg_node.cpp
(+16 files in other folders)
