<?xml version="1.0"?>
<package format="2">
  <name>gazebo_ackermann_drive_plugin</name>
  <version>0.0.0</version>
  <description>The gazebo_ackermann_drive_plugin package</description>

  <maintainer email="oleg@todo.todo">oleg</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  
  <license>Proprietary</license>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>random_numbers</exec_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>random_numbers</build_depend>

</package>
