<?xml version="1.0"?>
<package format="2">
  <name>myhamster_slam</name>
  <version>1.2.5</version>
  <description>
    The myhamster_slam package provides roslaunch scripts for starting the SLAM
  </description>
  <license>Apache 2.0</license>
  <author email="yezhicheng99@gmail.com">Pyo</author>
  <author>Zhicheng Ye</author>
  <maintainer email="yezhicheng99@gmail.com">Zhicheng Ye</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
